[package]
name = "enum_system_geo_id"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
litcrypt = "0.3"
kernel32-sys = "0.2.1"
ntapi = "0.4"
winapi = {version = "0.3.8", features=[
    "winnt",
    "winuser",
    "memoryapi",
    "errhandlingapi",
    "processthreadsapi",
    "synchapi",
    "winbase",
    "handleapi",
    "libloaderapi",
    "winnls"
]}
libaes = "0.6.1"
reqwest = { version = "0.11.18", features = ["blocking"] }

